# GigaByte-RPG

./: CMakeLists.txt  README.md  main  main.cpp
Cenarios/: INN.cpp  INN.h  Loja.cpp  Loja.h  fases.cpp  fases.h
Cenarios/INN/: INN.cpp
Cenarios/Loja/: Loja.cpp  arma.cpp  arma.h  trocaDosItens.cpp  trocaDosItens.h
Historia/: Historia.cpp  Historia.h  funcoesDaHistoria.cpp  funcoesDaHistoria.h
Lobby/: Lobby.cpp  Lobby.h
Monstros/: monstros.cpp  monstros.h
Personagem/: Personagem.cpp  Personagem.h
Personagem/Itens/: Itens.cpp  Itens.h
funcoesUteis/: funcoesUteis.cpp  funcoesUteis.h
inc/: Combate.h  Entidade.h  Fases.h  Historia.h  INN.h  Itens.h  Lobby.h  Loja.h  Personagem.h  Tipos.h
inc/Cenarios/Fases/: Fases.h
inc/Cenarios/INN/: INN.h
inc/Cenarios/Loja/: Loja.h
inc/Cenarios/fases/: fases.h
inc/Lobby/: Lobby.h
inc/Monstros/: Boss.h  FabricaDeMonstros.h  Monstro.h
inc/Personagem/: Personagem.h
inc/Personagem/Itens/: Itens.h
inc/monstros/: FabricaDeMonstros.h
inc/utilitarios/: utilitarios.h
src/: Combate.cpp  Entidade.cpp  Fases.cpp  Historia.cpp  INN.cpp  Itens.cpp  Lobby.cpp  Loja.cpp  Personagem.cpp  Utilitarios.cpp  main.cpp  utilitarios.cpp
src/Cenarios/Fases/: Fases.cpp
src/Cenarios/INN/: INN.cpp
src/Cenarios/Loja/: Loja.cpp  trocaDosItens.cpp
src/Historia/: Historia.cpp  funcoesDaHistoria.cpp
src/Lobby/: Lobby.cpp
src/Monstros/: Boss.cpp  FabricaDeMonstros.cpp  Monstro.cpp  monstros.cpp
src/Personagem/: Personagem.cpp
src/Personagem/Itens/: Itens.cpp
src/funcoesUteis/: funcoesUteis.cpp
src/monstros/: FabricaDeMonstros.cpp  Monstro.cpp
src/utilitarios/: utilitarios.cpp
